--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
         <optional>true</optional>
     </dependency>
     
+<dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-sync</artifactId>
+        <version>4.2.3</version>
+    </dependency>
+    
     
     
 		
