--- a/.github/workflows/main_mapio1.yml
+++ b/.github/workflows/main_mapio1.yml
@@ -5,8 +5,7 @@ name: Build and deploy container app to Azure Web App - mapio1
 
 on:
   push:
-    branches:
-      - main
+    branches: [ ]
   workflow_dispatch:
 
 jobs:
