--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [  ]
-  pull_request:
-    branches: [  ]
+    branches: [ main ]
 
 jobs:
   build:
