--- a/.github/workflows/main_mapio.yml
+++ b/.github/workflows/main_mapio.yml
@@ -4,6 +4,8 @@
 name: Build and deploy container app to Azure Web App - mapio
 
 on:
+  push:
+      branches: [ main ]
   workflow_dispatch:
 
 jobs:
