--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,13 @@
 		</dependency>
 
 
+
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
+
 	</dependencies>
 
 	<build>
